// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > reviewRequest > getReviewRequests > rejects missing active parameter 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "boolean",
          "message": "Required",
          "path": [
            "query",
            "active",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Required",
    "name": "Error",
  },
}
`;

exports[`routes > reviewRequest > getReviewRequests > rejects missing value for active parameter 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "boolean",
          "message": "Required",
          "path": [
            "query",
            "active",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Required",
    "name": "Error",
  },
}
`;

exports[`routes > reviewRequest > getReviewRequests > returns only active review requests 1`] = `
{
  "approvals": [
    {
      "createdAt": "2023-08-13T00:00:00.000Z",
      "entities": [
        "group:group",
      ],
      "kind": "release",
      "model": "example-model-2-nevwg4",
      "reviews": [],
      "role": "msro",
      "semver": "3.0.3",
      "updatedAt": "2023-08-14T00:00:00.000Z",
    },
  ],
}
`;

exports[`routes > reviewRequest > getReviewRequests > returns only inactive review requests 1`] = `
{
  "approvals": [
    {
      "createdAt": "2023-08-13T00:00:00.000Z",
      "entities": [
        "group:group",
      ],
      "kind": "release",
      "model": "example-model-2-nevwg4",
      "reviews": [
        {
          "comment": "looks amazing!",
          "decision": "approve",
          "user": "user",
        },
      ],
      "role": "msro",
      "semver": "3.0.2",
      "updatedAt": "2023-08-14T00:00:00.000Z",
    },
  ],
}
`;
